[gd_scene load_steps=38 format=3 uid="uid://druxxpcb6lsu2"]

[ext_resource type="Script" path="res://Scripts/AIPlayer.gd" id="1_3dd50"]
[ext_resource type="Texture2D" uid="uid://31euwv1j14tx" path="res://Assets/players/char_indicators/AI_Indicator.png" id="1_ipmt2"]
[ext_resource type="Texture2D" uid="uid://k0h8x5a3euse" path="res://Assets/players/char_01/down_1.png" id="3_wrlq5"]
[ext_resource type="Texture2D" uid="uid://bs6631okrwr7c" path="res://Assets/players/char_01/down_2.png" id="4_avgco"]
[ext_resource type="Texture2D" uid="uid://5q1socbhyiyo" path="res://Assets/players/char_01/down_3.png" id="5_3wtg7"]
[ext_resource type="Texture2D" uid="uid://d4q5f2y1f66v" path="res://Assets/players/char_01/base.png" id="6_b4cr2"]
[ext_resource type="Texture2D" uid="uid://ca72mlcv3rnxq" path="res://Assets/players/char_01/side_1.png" id="7_nud33"]
[ext_resource type="Texture2D" uid="uid://54uqh2xx15gb" path="res://Assets/players/char_01/side_2.png" id="8_tpex5"]
[ext_resource type="Texture2D" uid="uid://brfbslbn4okol" path="res://Assets/players/char_01/side_3.png" id="9_xreh2"]
[ext_resource type="Texture2D" uid="uid://3fb0bxnqdne6" path="res://Assets/players/char_01/up_1.png" id="10_17xxi"]
[ext_resource type="Texture2D" uid="uid://5hgxoilwgvnh" path="res://Assets/players/char_01/up_2.png" id="11_0qvnp"]
[ext_resource type="Texture2D" uid="uid://doij6ua7o2kmb" path="res://Assets/players/char_01/up_3.png" id="12_kdxkg"]
[ext_resource type="Texture2D" uid="uid://n6yofm01emli" path="res://Assets/players/char_03/down_1.png" id="13_cf5s8"]
[ext_resource type="Texture2D" uid="uid://bllx6rr4ikqsu" path="res://Assets/players/char_03/down_2.png" id="14_g0geb"]
[ext_resource type="Texture2D" uid="uid://dp3oqrbcsdkja" path="res://Assets/players/char_03/down_3.png" id="15_kpe43"]
[ext_resource type="Texture2D" uid="uid://xkesbncl8xxa" path="res://Assets/players/char_03/base.png" id="16_he68p"]
[ext_resource type="Texture2D" uid="uid://cmf6su0uwxo76" path="res://Assets/players/char_03/side_1.png" id="17_exl82"]
[ext_resource type="Texture2D" uid="uid://cp677olg8pevc" path="res://Assets/players/char_03/side_2.png" id="18_oveav"]
[ext_resource type="Texture2D" uid="uid://c0oxawkavtvrb" path="res://Assets/players/char_03/side_3.png" id="19_nucsl"]
[ext_resource type="Texture2D" uid="uid://cogwoihkohji2" path="res://Assets/players/char_03/up_1.png" id="20_qrurk"]
[ext_resource type="Texture2D" uid="uid://cfg3sfmi6rcwt" path="res://Assets/players/char_03/up_2.png" id="21_tawfo"]
[ext_resource type="Texture2D" uid="uid://dj1xabqifkgpb" path="res://Assets/players/char_03/up_3.png" id="22_fa2sa"]
[ext_resource type="Texture2D" uid="uid://bkfwjsq6dmx45" path="res://Assets/players/char_02/down_1.png" id="23_453op"]
[ext_resource type="Texture2D" uid="uid://ij6kc8twmg3w" path="res://Assets/players/char_02/down_2.png" id="24_vplb2"]
[ext_resource type="Texture2D" uid="uid://b6ab23ncuufc3" path="res://Assets/players/char_02/down_3.png" id="25_mlgv3"]
[ext_resource type="Texture2D" uid="uid://divc4iotekwol" path="res://Assets/players/char_02/base.png" id="26_ai8be"]
[ext_resource type="Texture2D" uid="uid://dhg2nap6h2ndr" path="res://Assets/players/char_02/side_1.png" id="27_wrai7"]
[ext_resource type="Texture2D" uid="uid://cui001gq0eoyw" path="res://Assets/players/char_02/side_2.png" id="28_2xoxt"]
[ext_resource type="Texture2D" uid="uid://bebun6tymh1r6" path="res://Assets/players/char_02/side_3.png" id="29_nqsi0"]
[ext_resource type="Texture2D" uid="uid://d0pr7uhsyva85" path="res://Assets/players/char_02/up_1.png" id="30_8a40x"]
[ext_resource type="Texture2D" uid="uid://c4y32t2vt43b5" path="res://Assets/players/char_02/up_2.png" id="31_ur1ju"]
[ext_resource type="Texture2D" uid="uid://bc2ux3ufepxr0" path="res://Assets/players/char_02/up_3.png" id="32_00g2p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0rs3s"]
radius = 7.0

[sub_resource type="SpriteFrames" id="SpriteFrames_uoqd0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_wrlq5")
}, {
"duration": 1.0,
"texture": ExtResource("4_avgco")
}, {
"duration": 1.0,
"texture": ExtResource("5_3wtg7")
}],
"loop": true,
"name": &"blue_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_b4cr2")
}],
"loop": true,
"name": &"blue_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_nud33")
}, {
"duration": 1.0,
"texture": ExtResource("8_tpex5")
}, {
"duration": 1.0,
"texture": ExtResource("9_xreh2")
}],
"loop": true,
"name": &"blue_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_17xxi")
}, {
"duration": 1.0,
"texture": ExtResource("11_0qvnp")
}, {
"duration": 1.0,
"texture": ExtResource("12_kdxkg")
}],
"loop": true,
"name": &"blue_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_cf5s8")
}, {
"duration": 1.0,
"texture": ExtResource("14_g0geb")
}, {
"duration": 1.0,
"texture": ExtResource("15_kpe43")
}],
"loop": true,
"name": &"grey_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_he68p")
}],
"loop": true,
"name": &"grey_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_exl82")
}, {
"duration": 1.0,
"texture": ExtResource("18_oveav")
}, {
"duration": 1.0,
"texture": ExtResource("19_nucsl")
}],
"loop": true,
"name": &"grey_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_qrurk")
}, {
"duration": 1.0,
"texture": ExtResource("21_tawfo")
}, {
"duration": 1.0,
"texture": ExtResource("22_fa2sa")
}],
"loop": true,
"name": &"grey_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_453op")
}, {
"duration": 1.0,
"texture": ExtResource("24_vplb2")
}, {
"duration": 1.0,
"texture": ExtResource("25_mlgv3")
}],
"loop": true,
"name": &"orange_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_ai8be")
}],
"loop": true,
"name": &"orange_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_wrai7")
}, {
"duration": 1.0,
"texture": ExtResource("28_2xoxt")
}, {
"duration": 1.0,
"texture": ExtResource("29_nqsi0")
}],
"loop": true,
"name": &"orange_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("30_8a40x")
}, {
"duration": 1.0,
"texture": ExtResource("31_ur1ju")
}, {
"duration": 1.0,
"texture": ExtResource("32_00g2p")
}],
"loop": true,
"name": &"orange_up",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_jsoie"]
resource_name = "drop_bomb"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 0, 1)]
}

[sub_resource type="Animation" id="Animation_egigc"]
resource_name = "take_damage"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0.00784314, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0h4b6"]
_data = {
"drop_bomb": SubResource("Animation_jsoie"),
"take_damage": SubResource("Animation_egigc")
}

[node name="AIPlayer" type="CharacterBody2D" groups=["ai_player"]]
script = ExtResource("1_3dd50")

[node name="PlayerIndicatorSprite2D" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(0, -15)
scale = Vector2(0.05, 0.05)
texture = ExtResource("1_ipmt2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0rs3s")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_uoqd0")
animation = &"blue_idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../PlayerIndicatorSprite2D")
libraries = {
"": SubResource("AnimationLibrary_0h4b6")
}

[node name="ExplosionBoostTimer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="ExplosionBoostTimer" to="." method="_on_explosion_boost_timer_timeout"]
